--- a/Introduction.tex
+++ b/Introduction.tex
@@ -34,7 +34,7 @@ The Railway Verification Group at the Computer Science Department of Swansea Uni
 \section{Results of the Thesis}
 
 
-The main result of this thesis is the use of program extraction to obtain a verified DPLL SAT solving algorithm that can solve industrial sized problems in the form of verifying solid state interlockings. We have named the resulting SAT solver XSAT and show that its performance is comparable with other verified SAT algorithms. This is the biggest case study so far in the area of program extraction and demonstrates that it can be used for practical purposes. One of the biggest arguements against the use of program extraction is that one loses control over the efficiency of the program. We have demonstrated that it is possible to carry out efficiency considerations at the proof level and therefore obtain a more efficient extracted program. We demonstrate that it is possible to modify the SAT proof system and extract a more advanced SAT algorithm that implements an optimisation called clause learning. We also demonstrate that it is possible to extract a resolution algorithm based on our original DPLL SAT solver.
+The main result of this thesis is the use of program extraction to obtain a verified DPLL SAT solving algorithm that can solve industrial sized problems in the form of verifying solid state interlockings. We have named the resulting SAT solver XSAT and show that its performance is comparable with other verified SAT algorithms. This case study opens up a new area of application for program extraction to obtain verified decision procedures.This is the biggest case study so far in the area of program extraction and demonstrates that it can be used for practical purposes.  One of the biggest arguements against the use of program extraction is that one loses control over the efficiency of the program. We have demonstrated that it is possible to carry out efficiency considerations at the proof level and therefore obtain a more efficient extracted program. We demonstrate that it is possible to modify the SAT proof system and extract a more advanced SAT algorithm that implements an optimisation called clause learning. We also demonstrate that it is possible to extract a resolution algorithm based on our original DPLL SAT solver.
 
 
 The second result of this thesis is the modelling and verification of the European Rail Traffic Management System using Real Time Maude. First, we formalised the ERTMS system as several hybrid automata in order to capture its behaviour. Then we modelled the system as a Real Time Maude specification and executed the specification of the system to simulate and validate the behaviour of our model. This is the first formalisation of ERTMS to capture the interlocking, radio block processor, train and the communications between them.
